Recreate the actions after a part switch To all kontact developers: all other kontact components with dynamic kactions may suffer of the same problem...

BUG:102094

svn path=/branches/KDE/3.5/kdepim/; revision=445974